K8S/ingress/aws-alb/merge-ingress/merged-ingress-rule.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-green
spec:
  selector:
    matchLabels:
      app: blog-green
  replicas: 3
  template:
    metadata:
      labels:
        app: blog-green
    spec:
      containers:
      - name: blog
        image: dockersamples/static-site
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog-green
  name: blog-green
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: blog-green
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
  labels:
    app: blog
  annotations:
    kubernetes.io/ingress.class: merge
    merge.ingress.kubernetes.io/config: blog-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: blog
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog-green
  labels:
    app: blog-green
  annotations:
    kubernetes.io/ingress.class: merge
    merge.ingress.kubernetes.io/config: blog-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: blog-green
              servicePort: 80
